Fix close button font style on Firefox

--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ body {
     color: #faa;
 }
 .selectionToolbar > a > span {
+    font-family: 'Times New Roman', Times, serif;
     font-size: 26pt;
     font-weight: bold;
 }
